base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: greeting-ui
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: greeting-ui
  sessionAffinity: None
