base/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: greeting-ui
spec:
  host: example-app.apps.paas.lab.stocky37.dev
  port:
    targetPort: http
  to:
    kind: Service
    name: greeting-ui
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
